# localbase3

./: .gitignore  ADR.md  ADRs.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SOTA.md  SPEC.md  TEST-README.md  fix-next-conflict.sh  fix_localbase_tests.py  fix_localbase_tests.sh  test-api.js  worklog.md
.github/: CODEOWNERS  FUNDING.yml
localbase-tests/: README.md  benchmark.py  check_import.py  config.json  conftest.py  create_and_run_test.py  create_and_run_test_direct.py  create_and_run_test_extremely_direct.py  create_and_run_test_print.py  create_local_module_test.py  create_mock_test.py  create_mock_utils_test.py  create_simple_test.py  create_symlink.py  create_test.py  create_utils_test.py  create_very_simple_test.py  fix_all_tests.py  fix_and_run.py  fix_imports.py  fix_specific_test.py  fix_test_files.py  fix_tests.py  install_and_test.sh  install_package.py  modify_all_tests.py  modify_tests.py  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  run_mock_test.py  run_pytest.py  run_pytest_direct.py  run_pytest_manual.py  run_pytest_simple.py  run_pytest_verbose.py  run_simple_test.sh  run_simple_test_bash_echo_verbose_2.sh  run_test.py  (+9 more)
localbase-tests/integration/: conftest.py
localbase-tests/integration/frontend-blockchain/: conftest.py
localbase-tests/integration/frontend-supabase/: conftest.py  test_auth.py
localbase-tests/integration/supabase-blockchain/: conftest.py
localbase-tests/localbase_tests/: __init__.py  utils.py
localbase-tests/security/: conftest.py
(+419 files in other folders)
