[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localbase_tests"
version = "0.1.0"
description = "Integration and security tests for the LocalBase project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pytest>=7.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=2.12.0",
]

[tool.setuptools]
packages = ["localbase_tests"]
